--- a/index.html
+++ b/index.html
@@ -51,9 +51,70 @@
 <div>
     <h1>Request for your Branch Debit Card in the App.</h1>
 </div>
-
-
 </section>
+
+<!-- grid section -->
+ <section>
+<main>
+    <h2>Build credit
+as you go
+</h2>
+    <img src="" alt="">
+    <p>We designed our loan process to fit your needs and help you grow. As you build credit with Branch, you unlock larger loan amounts.</p>
+</main>
+
+
+<main>
+    <h2>Get what you
+need on the go
+</h2>
+    <img src="" alt="">
+    <p>
+
+Unlike other lenders, we don't make you jump through hoops or fill out paperwork. Simply apply through the Branch app and get approved in under 24 hours.
+
+</p>
+</main>
+
+
+<main>
+    <h2>Invest and earn
+up to 23% interest</h2>
+    <img src="" alt="">
+    <p>Market leading interest rates make your money go further. We offer flexible withdrawals so that you can access your money anytime, anywhere.</p>
+</main>
+
+<main>
+    <h2>Reliable transfers
+from your wallet
+</h2>
+    <img src="" alt="">
+    <p>With the Branch Wallet, you can send and receive payments from your friends and family.
+
+</p>
+</main>
+
+<main>
+    <h2>Pay bills with the
+tap of a button
+</h2>
+    <img src="" alt="">
+    <p>Easily pay bills and purchase airtime and data bundles direct from your Branch Wallet. Transact on the go and enjoy instant purchases.</p>
+</main>
+
+<main>
+    <h2>No surprises,
+no embarrassment</h2>
+    <img src="" alt="">
+    <p>We don't put restrictions on how you spend your money, we tell no one about your money business, and our customer support team is available 24/7.</p>
+</main>
+
+
+
+
+
+
+ </section>
 
 
 
