--- a/index.html
+++ b/index.html
@@ -54,8 +54,8 @@
 </section>
 
 <!-- grid section -->
- <section>
-<main>
+ <section class="grid">
+<main class="gridbox">
     <h2>Build credit
 as you go
 </h2>
@@ -64,7 +64,7 @@ as you go
 </main>
 
 
-<main>
+<main class="gridbox">
     <h2>Get what you
 need on the go
 </h2>
@@ -77,14 +77,14 @@ Unlike other lenders, we don't make you jump through hoops or fill out paperwork
 </main>
 
 
-<main>
+<main class="gridbox">
     <h2>Invest and earn
 up to 23% interest</h2>
     <img src="" alt="">
     <p>Market leading interest rates make your money go further. We offer flexible withdrawals so that you can access your money anytime, anywhere.</p>
 </main>
 
-<main>
+<main class="gridbox">
     <h2>Reliable transfers
 from your wallet
 </h2>
@@ -94,7 +94,7 @@ from your wallet
 </p>
 </main>
 
-<main>
+<main class="gridbox">
     <h2>Pay bills with the
 tap of a button
 </h2>
@@ -102,17 +102,12 @@ tap of a button
     <p>Easily pay bills and purchase airtime and data bundles direct from your Branch Wallet. Transact on the go and enjoy instant purchases.</p>
 </main>
 
-<main>
+<main class="gridbox">
     <h2>No surprises,
 no embarrassment</h2>
     <img src="" alt="">
     <p>We don't put restrictions on how you spend your money, we tell no one about your money business, and our customer support team is available 24/7.</p>
 </main>
-
-
-
-
-
 
  </section>
 
