--- a/index.html
+++ b/index.html
@@ -112,6 +112,21 @@ no embarrassment</h2>
  </section>
 
 
+ <!-- flower section -->
+
+ <section class="flower">
+<main>
+    <img src="asset/plants-2120f3eafc92bfda7a3c0562f0b5ea5f59e2791c332573a61e3038d8ae267d43.png" alt="">
+</main>
+
+<main>
+    <h1>Download the Branch app and create your account</h1>
+</main>
+
+
+ </section>
+
+
 
 
 </div>
